# phantom

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  build.rs  compose.yaml  docker-compose.yml  mysql_trace_plan.md  plan.md
.claude/: launch.json
.github/workflows/: ci.yml
crates/phantom-agent/: Cargo.toml
crates/phantom-agent/src/: lib.rs
crates/phantom-capture/: AGENTS.md  Cargo.toml
crates/phantom-capture/src/: fault.rs  ldpreload.rs  lib.rs  proxy.rs
crates/phantom-core/: AGENTS.md  Cargo.toml
crates/phantom-core/src/: capture.rs  error.rs  lib.rs  mysql.rs  query.rs  redact.rs  storage.rs  trace.rs  view.rs
crates/phantom-java-agent/src/com/example/phantom/: Agent.java
crates/phantom-storage/: AGENTS.md  Cargo.toml
crates/phantom-storage/src/: fjall_mysql.rs  fjall_store.rs  lib.rs
crates/phantom-tui/: AGENTS.md  Cargo.toml
crates/phantom-tui/src/: app.rs  event.rs  export.rs  lib.rs  ui.rs
docs/: compatibility.md  how-to-use.ja.md  jsonl-schema.md
examples/docker-sidecar/: README.md  compose.yaml
src/: cli.rs  main.rs  runner.rs
src/commands/: mod.rs  query.rs  run.rs
src/mcp/: mod.rs  server.rs  session.rs
tests/: cli_query_integration.rs  fault_injection.rs  mcp_stdio_integration.rs  proxy_bind_integration.rs  proxy_curl_https_integration.rs  proxy_go_integration.rs  proxy_gzip_integration.rs  proxy_java_clients_integration.rs  proxy_node_integration.rs  proxy_php_integration.rs  proxy_php_ldpreload_integration.rs  proxy_python_integration.rs  proxy_springboot_integration.rs  redaction_integration.rs
tests/apps/go-app/: client.go
tests/apps/java-http-clients/: pom.xml
tests/apps/java-http-clients/src/main/java/com/example/phantom/: Client.java
tests/apps/node-app/: client-alts.js  client.js  package-lock.json  package.json  proxy-preload.js
tests/apps/php-app/: client.php
tests/apps/python-app/: client.py
tests/apps/springboot-app/: pom.xml
tests/apps/springboot-app/src/main/java/com/example/phantom/: ClientApplication.java
tests/integration/: lib.sh  run_tests.sh
