[workspace]
members = [
    "crates/phantom-core",
    "crates/phantom-storage",
    "crates/phantom-capture",
    "crates/phantom-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
phantom-core = { path = "crates/phantom-core" }
phantom-storage = { path = "crates/phantom-storage" }
phantom-capture = { path = "crates/phantom-capture" }
phantom-tui = { path = "crates/phantom-tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[package]
name = "phantom"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-core = { workspace = true }
phantom-storage = { workspace = true }
phantom-capture = { workspace = true }
phantom-tui = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
