[package]
name = "phantom-agent"
version.workspace = true
edition.workspace = true
description = "LD_PRELOAD agent for zero-instrumentation HTTP capture (Linux only)"

[lib]
name = "phantom_agent"
crate-type = ["dylib"]

# Only compiled on Linux – redhook and related deps are Linux-specific.
[target.'cfg(target_os = "linux")'.dependencies]
redhook = "2"
libc = "0.2"
httparse = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
